force-app/main/default/objects/copadoQuality__SCA_Rule__c/fields/copadoQuality__Category__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bestpractices</fullName>
                <label>Best Practices</label>
            </value>
            <value>
                <fullName>codestyle</fullName>
                <label>Code Style</label>
            </value>
            <value>
                <fullName>design</fullName>
                <label>Design</label>
            </value>
            <value>
                <fullName>documentation</fullName>
                <label>Documentation</label>
            </value>
            <value>
                <fullName>errorprone</fullName>
                <label>Error Prone</label>
            </value>
            <value>
                <fullName>multithreading</fullName>
                <label>Multithreading</label>
            </value>
            <value>
                <fullName>performance</fullName>
                <label>Performance</label>
            </value>
            <value>
                <fullName>security</fullName>
                <label>Security</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>