force-app/main/default/objects/copadoQuality__SCA_Rule__c/fields/copadoQuality__ConfigJson__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__ConfigJson__c</fullName>
    <label>Config Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>