force-app/main/default/objects/copadoQuality__SCA_Rule__c/fields/copadoQuality__Extension_Configuration__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Extension_Configuration__c</fullName>
    <label>Extension Configuration</label>
    <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
    <relationshipLabel>SCA Rules</relationshipLabel>
    <relationshipName>SCA_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>