force-app/main/default/objects/copadoQuality__SCA_Rule__c/fields/copadoQuality__FilePath__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__FilePath__c</fullName>
    <label>File Path</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>