force-app/main/default/objects/copadoQuality__SCA_Rule__c/fields/copadoQuality__Priority__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - High</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Medium High</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Medium Low</label>
            </value>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5 - Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>