force-app/main/default/objects/copadoQuality__SCA_Rule__c/fields/copadoQuality__Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>xpath</fullName>
                <label>XPath</label>
            </value>
            <value>
                <fullName>standard</fullName>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>