force-app/main/default/objects/copadoQuality__SCA_Rule__c/fields/copadoQuality__XPath_Expression__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__XPath_Expression__c</fullName>
    <label>XPath Expression</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>